--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
+    "stylus-loader": "^3.0.2",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-clipboards": "^1.3.0",
+    "vue-router": "^3.1.3",
+    "vue-style-loader": "^4.1.2",
+    "vuetify": "^1.5.21",
+    "vuetify-google-autocomplete": "^2.0.0-beta.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -27,6 +32,9 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "geckodriver": "^1.19.0",
-    "vue-template-compiler": "^2.6.10"
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
+    "vue-template-compiler": "^2.6.10",
+    "vuetify-loader": "^1.3.0"
   }
 }
