removed transform-runtime, which resolves #73

--- a/.babelrc
+++ b/.babelrc
@@ -4,11 +4,12 @@
       "modules": false,
       "targets": {
         "browsers": ["> 1%", "last 2 versions", "not ie <= 8"]
-      }
+      },
+      "exclude": ["transform-es2015-object-super"]
     }],
     "stage-2"
   ],
-  "plugins": ["transform-vue-jsx", "transform-runtime"],
+  "plugins": ["transform-vue-jsx"],
   "env": {
     "test": {
       "presets": ["env", "stage-2"],
