--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "vue-clipboards": "^1.3.0",
     "vue-router": "^3.1.3",
     "vue-style-loader": "^4.1.2",
-    "vuetify": "^1.5.21",
-    "vuetify-google-autocomplete": "^2.0.0-beta.8"
+    "vuetify": "^2.1.15",
+    "vuetify-google-autocomplete": "^2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
